--- a/.github/workflows/sync-2-upstream.yml
+++ b/.github/workflows/sync-2-upstream.yml
@@ -23,7 +23,7 @@ jobs:
       id: sync
       uses: bdougie/Fork-Sync-With-Upstream-action@fork
       with:
-        upstream_repository: open-sauced/goals-template
+        upstream_repository: MallikarjunHt/Resources
         upstream_branch: master
         target_branch: master                       # optional
         github_token: ${{ secrets.GITHUB_TOKEN }}   # optional, for accessing repos that requir authentication
